@@ -1,3 +1,9 @@
+2016-04-19 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	* DBSoap.h
+	Getters for batch size.
+
 2016-04-11 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m (_create)
